App packaging for macOS. - Added configuration for packaging the app as a macOS application using `jpackage`. - Updated `build.gradle.kts` to disable `distZip` and `distTar` tasks. - Added `packageMacApp` task to generate a macOS app image. - Configured default JVM arguments for the application. - Created `Info.plist` for macOS app metadata. - Minor UI change to adjust window size and location. - Added run configurations to run and assemble.